--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,6 @@ on:
         options:
           - yes
           - no
-      additionalFlags:
-        description: 'Additional VSCE flags (optional)'
-        required: false
-        default: ''
 
 jobs:
   release:
@@ -51,26 +47,25 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Setup Node.js 22
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 22
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build (Development)
-        if: ${{ github.event.inputs.releaseChannel == 'edge' }}
-        run: npm run build:dev
-
-      - name: Build (Production)
-        if: ${{ github.event.inputs.releaseChannel == 'stable' }}
-        run: npm run build:prod
+      - name: Build Extension
+        run: npm run package
 
       - name: Generate Changelog
         run: |
-          git log $(git describe --tags --abbrev=0)..HEAD --oneline > CHANGELOG.md
+          if git describe --tags --abbrev=0 &> /dev/null; then
+            git log $(git describe --tags --abbrev=0)..HEAD --oneline > CHANGELOG.md
+          else
+            git log --oneline > CHANGELOG.md
+          fi
           cat CHANGELOG.md
 
       - name: Configure Git
@@ -83,57 +78,42 @@ jobs:
         run: |
           CURRENT_VERSION=$(node -p "require('./package.json').version")
           if [ "${{ github.event.inputs.releaseChannel }}" == "edge" ]; then
-            if [[ "$CURRENT_VERSION" != *"edge"* ]]; then
-              NEW_VERSION=$(npx semver $CURRENT_VERSION -i pre${{ github.event.inputs.releaseType }} --preid edge)
-            else
-              NEW_VERSION=$(npx semver $CURRENT_VERSION -i prerelease)
-            fi
+            NEW_VERSION=$(npx semver $CURRENT_VERSION -i pre${{ github.event.inputs.releaseType }} --preid edge)
           else
             NEW_VERSION=$(npx semver $CURRENT_VERSION -i ${{ github.event.inputs.releaseType }})
           fi
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          echo "Using version: $NEW_VERSION"
+          echo "VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
 
       - name: Update Version
         run: |
           npm version $NEW_VERSION --no-git-tag-version
-          git tag -a v$NEW_VERSION -m "Release v$NEW_VERSION"
           git add package.json package-lock.json
+          git commit -m "chore: release v$NEW_VERSION"
+          git tag v$NEW_VERSION
 
       - name: Package Extension
-        run: |
-          if [ "${{ github.event.inputs.releaseChannel }}" == "edge" ]; then
-            node .github/scripts/updateEdgeVersion.js
-            npx vsce package --pre-release -o extension-$NEW_VERSION.vsix ${{ github.event.inputs.additionalFlags }}
-          else
-            npx vsce package -o extension-$NEW_VERSION.vsix ${{ github.event.inputs.additionalFlags }}
-          fi
+        run: npx vsce package -o ai-commit-message-$NEW_VERSION.vsix
 
       - name: Publish to VS Code Marketplace
         if: ${{ github.event.inputs.publishMarketplace == 'yes' }}
-        run: |
-          npx vsce publish --packagePath extension-$NEW_VERSION.vsix \
-            --pre-release ${{ github.event.inputs.releaseChannel == 'edge' && '--pre-release' || '' }} \
-            -p ${{ secrets.VS_MARKETPLACE_TOKEN }}
+        run: npx vsce publish -p ${{ secrets.VS_MARKETPLACE_TOKEN }} --packagePath ai-commit-message-$NEW_VERSION.vsix
 
       - name: Publish to OpenVSX
         if: ${{ github.event.inputs.publishOpenVSX == 'yes' }}
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
-          extensionFile: extension-$NEW_VERSION.vsix
+          extensionFile: ai-commit-message-$NEW_VERSION.vsix
           preRelease: ${{ github.event.inputs.releaseChannel == 'edge' }}
 
       - name: Push Changes
-        run: |
-          git add package.json package-lock.json
-          git commit -m "chore: bump version to $NEW_VERSION"
-          git push origin HEAD:main --tags
+        run: git push origin main --tags
 
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
           tag: v${{ env.NEW_VERSION }}
-          artifacts: 'extension-*.vsix'
+          artifacts: 'ai-commit-message-*.vsix'
           bodyFile: CHANGELOG.md
           prerelease: ${{ github.event.inputs.releaseChannel == 'edge' }}
