--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+# .github/workflows/deploy.yml
 name: Build and Deploy Extension
 on:
   push:
@@ -12,48 +13,35 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 1. Install pnpm FIRST
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: latest
 
-      # 2. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: "pnpm"
 
-      # 3. Configure Git
       - name: Configure Git
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
-      # 4. Install dependencies
       - name: Install Dependencies
         run: pnpm install
 
-      # 5. Clean node_modules (fixed indentation)
-      - name: Clean node_modules
-        run: |
-          pnpm install --production=false
-          pnpm prune --production
-
-      # 6. Package extension
       - name: Package Extension
         run: |
           pnpm add -g @vscode/vsce
-          vsce package --no-dependencies
+          pnpm exec vsce package
 
-      # 7. Publish to VS Marketplace
       - name: Publish to Visual Studio Marketplace
         env:
           VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
         run: pnpm exec vsce publish --pat $VSCE_PAT
 
-      # 8. Publish to Open VSX
       - name: Publish to Open VSX Registry
         env:
           OVSX_PAT: ${{ secrets.OPEN_VSX_TOKEN }}
