--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-# .github/workflows/deploy.yml
 name: Build and Deploy Extension
 on:
   push:
@@ -13,35 +12,48 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: latest
 
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: "pnpm"
 
+      
       - name: Configure Git
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
 
+      
       - name: Install Dependencies
         run: pnpm install
 
+      
+      - name: Clean node_modules
+        run: |
+          rm -rf node_modules
+          pnpm install --frozen-lockfile
+
+      
       - name: Package Extension
         run: |
           pnpm add -g @vscode/vsce
-          pnpm exec vsce package
+          vsce package --no-dependencies
 
+      
       - name: Publish to Visual Studio Marketplace
         env:
           VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-        run: pnpm exec vsce publish --pat $VSCE_PAT
+        run: pnpm exec vsce publish --pat $VSCE_PAT --no-dependencies
 
+      
       - name: Publish to Open VSX Registry
         env:
           OVSX_PAT: ${{ secrets.OPEN_VSX_TOKEN }}
