--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Publish to Visual Studio Marketplace
         env:
           VSCE_PAT: ${{ secrets.VS_MARKETPLACE_TOKEN }}
-        run: pnpm exec vsce publish --pat $VSCE_PAT --no-dependencies
+        run: pnpm exec vsce publish $VSCE_PAT --no-dependencies
 
       
       - name: Publish to Open VSX Registry
