build(deps): update package-lock.json and package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-commit-message",
+  "name": "ai-commit-messege",
   "displayName": "Ai Commit Message",
   "publisher": "Its-Satyajit",
   "description": "",
