--- a/package.json
+++ b/package.json
@@ -1,240 +1,145 @@
 {
-    "name": "ai-commit-messege",
-    "displayName": "Ai Commit Messege",
-    "publisher": "Its-Satyajit",
-    "description": "",
-    "version": "0.2.4",
-    "engines": {
-        "vscode": "^1.92.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Its-Satyajit/ai-commit-messege.git"
-    },
-    "categories": [
-        "Other"
-    ],
-    "activationEvents": [
-        "onCommand:extension.generateCommitMessage",
-        "onStartupFinished",
-        "onLanguage:git-commit"
-    ],
-    "icon": "extension/assets/icons/images/logo256.png",
-    "main": "./dist/extension.js",
-    "contributes": {
-        "configuration": {
-            "title": "Ai Commit Message",
-            "properties": {
-                "commitMessageGenerator.apiUrl": {
-                    "type": "string",
-                    "default": "http://127.0.0.1:1234/v1/chat/completions",
-                    "description": "The URL of the API endpoint used to generate commit messages. Ensure this URL is correctly pointing to your message generation service."
-                },
-                "commitMessageGenerator.model": {
-                    "type": "string",
-                    "default": "bartowski/Meta-Llama-3.1-8B-Instruct-GGUF/Meta-Llama-3.1-8B-Instruct-IQ3_XS.gguf",
-                    "description": "The model identifier used for generating commit messages. Ensure the model specified is available and correctly configured."
-                },
-                "commitMessageGenerator.temperature": {
-                    "type": "number",
-                    "default": 0.7,
-                    "description": "The temperature setting for the model output, which controls the randomness of the generated commit message. Higher values produce more diverse outputs."
-                },
-                "commitMessageGenerator.maxTokens": {
-                    "type": "number",
-                    "default": 5000,
-                    "description": "The maximum number of tokens (words or pieces of words) that the model is allowed to generate in a commit message."
-                },
-                "commitMessageGenerator.apiKey": {
-                    "type": "string",
-                    "default": "your_api_key",
-                    "description": "The API key required to authenticate requests to the commit message generation service. Ensure this key is kept secure and private."
-                },
-                "commitMessageGenerator.types": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "default": [
-                        "🚀 feat",
-                        "🐛 fix",
-                        "🧹 chore",
-                        "📝 docs",
-                        "🎨 style",
-                        "🔨 refactor",
-                        "⚡ perf",
-                        "✅ test",
-                        "👷 ci",
-                        "🏗 build",
-                        "🔒 security",
-                        "📦 deps",
-                        "⚙️ config",
-                        "🎉 init",
-                        "📦 package",
-                        "🚨 lint",
-                        "🔀 merge",
-                        "🔥 hotfix",
-                        "♿ accessibility",
-                        "🗄 database",
-                        "📊 analytics",
-                        "🪵 logging",
-                        "🎨 ux",
-                        "❗ error-handling",
-                        "📚 documentation",
-                        "📦 container",
-                        "🔄 ci/cd",
-                        "⏪ revert",
-                        "🌍 i18n",
-                        "🌐 l10n",
-                        "🧼 cleanup",
-                        "🖼 ui",
-                        "🛠 infra",
-                        "🧰 devtools",
-                        "🧪 coverage",
-                        "📈 monitoring",
-                        "⚠️ deprecate",
-                        "⬆️ deps-upgrade",
-                        "🔧 maintenance",
-                        "🔄 config-change",
-                        "🐳 docker",
-                        "🚦 ci-cd-improvement",
-                        "🛠 refinement",
-                        "🌐 translation",
-                        "👤 ux",
-                        "🐞 bug",
-                        "🚩 feature-flag",
-                        "⏱ perf-test",
-                        "🗑 deps-remove",
-                        "🖥 env",
-                        "🔙 regression",
-                        "💾 backup",
-                        "🔧 build-sys",
-                        "📜 license",
-                        "🔍 seo",
-                        "🔑 sec-fix"
-                    ],
-                    "description": "A list of commit types that the extension will recognize and use to categorize commit messages. You can customize this list based on your project's needs."
-                },
-                "commitMessageGenerator.scopes": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    },
-                    "default": [
-                        "api",
-                        "ui",
-                        "core",
-                        "auth",
-                        "build",
-                        "config",
-                        "deps",
-                        "docs",
-                        "env",
-                        "i18n",
-                        "test",
-                        "db",
-                        "styles",
-                        "scripts",
-                        "mobile",
-                        "server",
-                        "client",
-                        "ci",
-                        "security",
-                        "middleware",
-                        "model",
-                        "router",
-                        "cli",
-                        "notifications",
-                        "logging",
-                        "validation",
-                        "serialization",
-                        "migration",
-                        "schema",
-                        "container",
-                        "cache",
-                        "queue",
-                        "service",
-                        "storage",
-                        "networking",
-                        "deployment",
-                        "monitoring",
-                        "metrics",
-                        "analytics",
-                        "template",
-                        "state-management",
-                        "module",
-                        "library",
-                        "feature-toggle",
-                        "backup",
-                        "integration",
-                        "cloud",
-                        "graphql",
-                        "rest",
-                        "json",
-                        "xml"
-                    ],
-                    "description": "A list of commit scopes that the extension will recognize and include in commit messages. Customize this list to align with the scopes relevant to your project."
-                }
-            }
-        },
-        "commands": [
-            {
-                "command": "extension.generateCommitMessage",
-                "title": "Generate Commit Message",
-                "icon": {
-                    "dark": "extension/assets/icons/dark.svg",
-                    "light": "extension/assets/icons/light.svg"
-                }
-            }
-        ],
-        "menus": {
-            "scm/title": [
-                {
-                    "command": "extension.generateCommitMessage",
-                    "group": "navigation",
-                    "when": "scmProvider == git"
-                }
-            ]
-        }
-    },
-    "scripts": {
-        "vscode:prepublish": "pnpm run package",
-        "compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
-        "watch": "npm-run-all -p watch:*",
-        "watch:esbuild": "node esbuild.js --watch",
-        "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-        "package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
-        "compile-tests": "tsc -p . --outDir out",
-        "watch-tests": "tsc -p . -w --outDir out",
-        "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
-        "check-types": "tsc --noEmit",
-        "lint": "eslint src --ext ts",
-        "test": "vscode-test",
-        "publish:patch": "npx vsce publish patch",
-        "publish:minor": "npx vsce publish minor",
-        "publish:major": "npx vsce publish major",
-        "create:package": "vsce package"
-    },
-    "devDependencies": {
-        "@types/mocha": "^10.0.7",
-        "@types/node": "~20.16.1",
-        "@types/vscode": "^1.92.0",
-        "@typescript-eslint/eslint-plugin": "^7.18.0 ",
-        "@typescript-eslint/parser": "^7.18.0 ",
-        "@vscode/test-cli": "^0.0.10",
-        "@vscode/test-electron": "^2.4.1",
-        "@vscode/vsce": "^3.0.0",
-        "esbuild": "^0.23.1",
-        "eslint": "^8.57.0",
-        "npm-run-all": "^4.1.5",
-        "typescript": "^5.5.4"
-    },
-    "dependencies": {
-        "@types/chalk": "^2.2.0",
-        "@types/diff": "^5.2.2",
-        "axios": "^1.7.5",
-        "chalk": "^5.3.0",
-        "diff": "7.0.0",
-        "simple-git": "^3.25.0"
-    }
+	"name": "ai-commit-messege",
+	"displayName": "Ai Commit Messege",
+	"publisher": "Its-Satyajit",
+	"description": "",
+	"version": "0.3.1",
+	"engines": {
+		"vscode": "^1.92.0"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Its-Satyajit/ai-commit-messege.git"
+	},
+	"categories": ["Other"],
+	"activationEvents": ["onStartupFinished", "onLanguage:git-commit"],
+	"icon": "extension/assets/icons/images/logo256.png",
+	"main": "./dist/extension.js",
+	"contributes": {
+		"configuration": {
+			"title": "Ai Commit Message",
+			"properties": {
+				"commitMessageGenerator.provider": {
+					"type": "string",
+					"enum": ["openai", "ollama"],
+					"default": "openai",
+					"description": "AI provider to use for commit message generation (Ollama or OpenAI-compatible API)"
+				},
+				"commitMessageGenerator.apiUrl": {
+					"type": "string",
+					"description": "Base URL for API endpoint. Defaults: Ollama - http://localhost:11434, OpenAI - http://localhost:1234/v1"
+				},
+				"commitMessageGenerator.model": {
+					"type": "string",
+					"description": "Model identifier. Defaults: Ollama - deepseek-r1:8b, OpenAI - deepseek-r1-distill-llama-8b"
+				},
+				"commitMessageGenerator.temperature": {
+					"type": "number",
+					"default": 0.7,
+					"description": "Controls randomness (0=deterministic, 1=creative)"
+				},
+				"commitMessageGenerator.maxTokens": {
+					"type": "number",
+					"default": 5000,
+					"description": "Maximum length of generated commit message in tokens"
+				},
+				"commitMessageGenerator.apiKey": {
+					"type": "string",
+					"description": "API key (if required by your OpenAI-compatible endpoint)",
+					"default": "your_api_key"
+				},
+				"commitMessageGenerator.types": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					},
+					"default": [
+						"feat: A new feature",
+						"fix: A bug fix",
+						"chore: Maintenance tasks",
+						"docs: Documentation updates",
+						"style: Code style changes",
+						"refactor: Code refactoring",
+						"perf: Performance improvements",
+						"test: Adding tests"
+					],
+					"description": "A list of commit types that the extension will recognize and use to categorize commit messages. You can customize this list based on your project's needs."
+				},
+				"commitMessageGenerator.scopes": {
+					"type": "array",
+					"items": {
+						"type": "string"
+					},
+					"default": [
+						"api",
+						"ui",
+						"core",
+						"auth",
+						"config",
+						"deps",
+						"docs",
+						"test",
+						"db",
+						"ci",
+						"security"
+					],
+					"description": "A list of commit scopes that the extension will recognize and include in commit messages. Customize this list to align with the scopes relevant to your project."
+				}
+			}
+		},
+		"commands": [
+			{
+				"command": "extension.generateCommitMessage",
+				"title": "Generate Commit Message",
+				"icon": {
+					"dark": "extension/assets/icons/dark.svg",
+					"light": "extension/assets/icons/light.svg"
+				}
+			},
+			{
+				"command": "extension.showCommitLogs",
+				"title": "Show Commit Generation Logs"
+			}
+		],
+		"menus": {
+			"scm/title": [
+				{
+					"command": "extension.generateCommitMessage",
+					"group": "navigation",
+					"when": "scmProvider == git"
+				}
+			]
+		}
+	},
+	"scripts": {
+		"vscode:prepublish": "pnpm run package",
+		"compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
+		"watch": "npm-run-all -p watch:*",
+		"watch:esbuild": "node esbuild.js --watch",
+		"watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+		"package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
+		"compile-tests": "tsc -p . --outDir out",
+		"watch-tests": "tsc -p . -w --outDir out",
+		"pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
+		"check-types": "tsc --noEmit",
+		"lint": "eslint src --ext ts",
+		"test": "vscode-test",
+		"publish:patch": "npx vsce publish patch",
+		"publish:minor": "npx vsce publish minor",
+		"publish:major": "npx vsce publish major",
+		"create:package": "vsce package"
+	},
+	"devDependencies": {
+		"@types/vscode": "^1.92.0",
+		"@typescript-eslint/eslint-plugin": "^7.18.0 ",
+		"@typescript-eslint/parser": "^7.18.0 ",
+		"@vscode/test-cli": "^0.0.10",
+
+		"@vscode/vsce": "^3.0.0",
+		"esbuild": "^0.23.1",
+		"eslint": "^8.57.0",
+
+		"typescript": "^5.5.4"
+	},
+	"dependencies": {}
 }
