--- a/package.json
+++ b/package.json
@@ -130,16 +130,14 @@
 		"create:package": "vsce package"
 	},
 	"devDependencies": {
+		"@types/node": "^22.10.10",
 		"@types/vscode": "^1.92.0",
 		"@typescript-eslint/eslint-plugin": "^7.18.0 ",
 		"@typescript-eslint/parser": "^7.18.0 ",
 		"@vscode/test-cli": "^0.0.10",
-
 		"@vscode/vsce": "^3.0.0",
 		"esbuild": "^0.23.1",
 		"eslint": "^8.57.0",
-
-		"typescript": "^5.5.4"
-	},
-	"dependencies": {}
+		"typescript": "^5.7.3"
+	}
 }
