--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
 		"watch-tests": "tsc -p . -w --outDir out",
 		"pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
 		"check-types": "tsc --noEmit",
-		"lint": "eslint src --ext ts",
+		"lint": "eslint",
 		"test": "vscode-test",
 		"publish:patch": "npx vsce publish patch",
 		"publish:minor": "npx vsce publish minor",
